add gk-element component

--- a/demo/gk-google-font.html
+++ b/demo/gk-google-font.html
@@ -2,13 +2,14 @@
 <html>
 
 <head>
-  <script src='../bower_components/jquery/jquery.min.js'></script>
-  <script src='../bower_components/gk/jquery.gk.js'></script>
-  <script src="../gfont.js"></script>
+  <script src='../../requirejs/require.js'></script>
+  <script src='../../jquery/jquery.min.js'></script>
+  <script src='../../gk/jquery.gk.js'></script>
+  <script src="../../gk-loader/gk-loader.js" components="../gfont.html"></script>
 </head>
 
 <body gk-app>
-  <gfont size='256px'>GK</gfont>
+  <gfont id='font1' size='256px'>GK</gfont>
 </body>
 
 </html>
