--- a/demo/gk-google-font.html
+++ b/demo/gk-google-font.html
@@ -2,10 +2,10 @@
 <html>
 
 <head>
-  <script src='../../requirejs/require.js'></script>
-  <script src='../../jquery/jquery.min.js'></script>
-  <script src='../../gk/jquery.gk.js'></script>
-  <script src="../../gk-loader/gk-loader.js" components="../gfont.html"></script>
+  <script src='../bower_components/requirejs/require.js'></script>
+  <script src='../bower_components/jquery/jquery.min.js'></script>
+  <script src='../bower_components/jquery.gk/jquery.gk.js'></script>
+  <script src="../bower_components/gk-loader/gk-loader.js" components="../gfont.html"></script>
 </head>
 
 <body gk-app>
