rename to gk-google-font

--- a/demo/gk-google-font.html
+++ b/demo/gk-google-font.html
@@ -5,11 +5,11 @@
   <script src='../bower_components/requirejs/require.js'></script>
   <script src='../bower_components/jquery/jquery.min.js'></script>
   <script src='../bower_components/jquery.gk/jquery.gk.js'></script>
-  <script src="../bower_components/gk-loader/gk-loader.js" components="../gfont.html"></script>
+  <script src="../bower_components/gk-loader/gk-loader.js" components="../gk-google-font.html"></script>
 </head>
 
 <body gk-app>
-  <gfont id='font1' size='256px'>GK</gfont>
+  <gk-google-font id='font1' size='256px'>GK</gk-google-font>
 </body>
 
 </html>
